# MIDIDreams

./: .gitignore  CMakeLists.txt
src/core/: CMakeLists.txt
src/ui/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/widgets/: CMakeLists.txt
